--- a/test1.ui
+++ b/test1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>360</height>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,8 +20,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>870</x>
-      <y>0</y>
+      <x>290</x>
+      <y>-20</y>
       <width>31</width>
       <height>1101</height>
      </rect>
@@ -42,11 +42,16 @@
    <widget class="QLineEdit" name="chatbotEnter">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>1040</y>
-      <width>791</width>
+      <x>10</x>
+      <y>230</y>
+      <width>271</width>
       <height>29</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>7</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(200,200,200)</string>
@@ -55,10 +60,10 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>960</y>
+      <x>100</x>
+      <y>190</y>
       <width>111</width>
-      <height>51</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="sizeIncrement">
@@ -67,9 +72,14 @@
       <height>0</height>
      </size>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(160, 255, 166);
-text-size: 200px</string>
+text-size: 2px</string>
     </property>
     <property name="text">
      <string>SPEAK TO ME:</string>
@@ -81,11 +91,16 @@ text-size: 200px</string>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>30</y>
-      <width>261</width>
-      <height>41</height>
+      <x>320</x>
+      <y>10</y>
+      <width>151</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -97,17 +112,23 @@ border-radius: 5px;          /* Optional: rounded corners */
 padding: 5px 10px;           /* Optional: internal padding */</string>
     </property>
     <property name="text">
-     <string>Initiate Strategic Illumination</string>
+     <string>Initiate Strategic 
+ Illumination</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>130</y>
-      <width>261</width>
+      <x>310</x>
+      <y>90</y>
+      <width>161</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -119,23 +140,29 @@ border-radius: 5px;          /* Optional: rounded corners */
 padding: 5px 10px;           /* Optional: internal padding */</string>
     </property>
     <property name="text">
-     <string>Initiate Radio Control</string>
+     <string>Execute Order 66</string>
     </property>
    </widget>
    <widget class="QPlainTextEdit" name="plainTextEdit">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>390</y>
-      <width>811</width>
-      <height>531</height>
+      <x>10</x>
+      <y>100</y>
+      <width>281</width>
+      <height>91</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(160, 255, 166);
 border: 2px solid rgb(160, 255, 166);  /* 2px thick black border */
 border-radius: 5px;          /* Optional: rounded corners */
-padding: 5px 10px;           /* Optional: internal padding */</string>
+padding: 5px 10px;           /* Optional: internal padding */
+text-size:2px</string>
     </property>
    </widget>
   </widget>
